--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html manifest="">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes" name="viewport">
 
-    <title>MyBlog</title>
+    <title>MySpace</title>
 
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
@@ -24,11 +24,9 @@
             //
             if (s.match(/\bclassic\b/)) {
                 profile = 'classic';
-            }
-            else if (s.match(/\bmodern\b/)) {
+            } else if (s.match(/\bmodern\b/)) {
                 profile = 'modern';
-            }
-            else {
+            } else {
                 profile = tags.desktop ? 'classic' : 'modern';
                 //profile = tags.phone ? 'modern' : 'classic';
             }
@@ -39,13 +37,14 @@
             // any data is pulled from it.
             //
             //return function (manifest) {
-                // peek at / modify the manifest object
+            // peek at / modify the manifest object
             //};
         };
     </script>
 
     <!-- The line below must be kept intact for Sencha Cmd to build your application -->
-    <script id="microloader" data-app="375a8660-d966-4c8e-a92d-84e2d9cc1474" type="text/javascript" src="bootstrap.js"></script>
+    <script data-app="375a8660-d966-4c8e-a92d-84e2d9cc1474" id="microloader" src="bootstrap.js"
+            type="text/javascript"></script>
 
 </head>
 <body></body>
